plugins {
    id 'java'
    id 'application'
}

application {
    mainClassName = 'refactoring.Refactor'
}

compileJava {
    options.compilerArgs += ['--enable-preview']
    options.release = 14
}
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(14)
    }
}

// Make a fat Jar
jar {
    manifest {
        attributes 'Main-Class': 'refactoring.Refactor',
                   'Class-Path': 'absfrontend.jar'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

// For now this should work, but the build should depend on
// the source of the git repo; fetch, build and use.

repositories {
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    testImplementation 'junit:junit:4.13.1'
    testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
    implementation files('libs/absfrontend.jar')
}
